"Continuing with Section 8"

--- a/true_4.tex
+++ b/true_4.tex
@@ -123,8 +123,7 @@ A  &\null&\mbox{ is a constant}\\
 
 Using $f(k_1' - k_1)$, we construct the packets
 \bearray
- \Psi_1(x,t) &=&  \int_0^\infty\, f(k_1' - k_1) e^{-(k_1'x + {E't\over \hbar})}\, dk_1' + \int_0^\infty\, f(k_1' - k_1) e^{i(k_1'x + 2\phi' - {E't\over \hbar})}\, dk_1' \\
- &\null& \mbox{and}\\
+ \Psi_1(x,t) &=&  \int_0^\infty\, f(k_1' - k_1) e^{-(k_1'x + {E't\over \hbar})}\, dk_1' + \int_0^\infty\, f(k_1' - k_1) e^{i(k_1'x + 2\phi' - {E't\over \hbar})}\, dk_1'  \mbox{ ~~and }\\
  \Psi_2(x,t) &=&  A e^{k_2x} \int_0^\infty\, f(k_1' - k_1) e^{-(k_1'x + {E't\over \hbar})}\, dk_1''\\
  \eearray using a real $f(k_1' - k_1)$ centered around $k_1' = k_1$. 
  
