--- a/true_notes.tex
+++ b/true_notes.tex
@@ -1,223 +1,6 @@
-%   11/11/92 211121724  MEMBER NAME  REPORT1  (TEXFILES) M  TEX
-%format: latex    %hyphen: English
-%\documentstyle[11pt,leqno,epsfig]{note}
-%\documentstyle[11pt,epsfig]{note}
-%\documentstyle[11pt,epsfig,pstimes,psmath]{note}
-%\documentstyle[epsf]{article}
-%\documentstyle{article}
-%\usepackage{amsmath}
-
-\documentclass[epsf]{article}
-\usepackage{graphicx}
-
-\font\twelverm=cmr12
-\font\twelvebf=cmbx12
-\font\tenbf=cmbx10
-\font\tenrm=cmr10
-\font\tenit=cmti10
-\font\elevenbf=cmbx10 scaled\magstep 1
-\font\elevenrm=cmr10 scaled\magstep 1
-\font\elevenit=cmti10 scaled\magstep 1
-\font\ninebf=cmbx9
-\font\ninerm=cmr9
-\font\nineit=cmti9
-\font\eightbf=cmbx8
-\font\eightrm=cmr8
-\font\eightit=cmti8
-\font\sevenrm=cmr7
-
-%\usepackage{amsmath,amssymb,latexsym} 
-%\usepackage{amsthm}`
-\usepackage{amsmath} 
-\usepackage{amssymb} 
-\usepackage{latexsym,hyperref} 
-\usepackage{easybmat}
-\usepackage{multirow,bigdelim}
-\usepackage{cleveref}
-
-\hypersetup{
-    bookmarks=true,          % show bookmarks bar?
-    unicode=false,             % non-Latin characters in Acrobat’s bookmarks
-    pdftoolbar=true,           % show Acrobat’s toolbar?
-    pdfmenubar=true,        % show Acrobat’s menu?
-    pdffitwindow=false,      % window fit to page when opened
-    pdfstartview={FitH},     % fits the width of the page to the window
-    pdftitle={My title},         % title
-    pdfauthor={Author},     % author
-    pdfsubject={Subject},   % subject of the document
-    pdfcreator={Creator},   % creator of the document
-    pdfproducer={Producer}, % producer of the document
-    pdfkeywords={keyword1, key2, key3}, % list of keywords
-    pdfnewwindow=true,      % links in new PDF window
-    colorlinks=true,               % false: boxed links; true: colored links
-    linkcolor=blue,                  % color of internal links (change box color with linkbordercolor)
-    citecolor=green,             % color of links to bibliography
-    filecolor=magenta,         % color of file links
-    urlcolor=cyan                % color of external links
-}
-
-%
-%  `pstimes.sty' sets \rm to be Times, and `psmath.sty' sets the math
-%  in Times as well.
-%
-%\textwidth = 7.0truein
-%\textheight = 8.5truein
-%\oddsidemargin=0.2truein
-%\evensidemargin=0.2truein
-%\topmargin=0.50truein
-
-\textwidth = 7.0truein
-\textheight = 8.5truein
-\oddsidemargin=-0.2truein
-\evensidemargin=-0.2truein
-\topmargin=0.0truein
-%\notename{UCD/IIRPA} \notenumber{92-24}
-
-\begin{document}
-\null
-%\hbox to \hsize{\hfill UCD/IIRPA~92-24}
-\begin{center}{{\tenbf TRUE'S NOTES ON QUANTUM MECHANICS}}
-		\vglue 1.0cm
- 	       {\tenrm  WILLIAM \,\,TRUE\\}
-	        \baselineskip=13pt
-	       {\tenit Physics Department\\
-	            University of California, Davis\\}
-\baselineskip=12pt
-               {\tenit Davis, CA 95616, USA\\}
-\end{center}
-%
-%\newmathalphabet{\oldcal}
-%\addtoversion{times}{\oldcal}{cmsy}{m}{n}
-\newcommand{\unit}[1]{\mbox{\it #1}}
-\newcommand{\subs}[1]{\mbox{\scriptsize\it #1}}
-\def\Q2{$Q^2$}
-\def\Wftn{$\Psi(\vec{r},t)$}
-\def\IntPsiSq{|\Psi|^2 d\vec{r}}
-\def\sgp{$\sigma_{\gamma p}\:$}
-\mathchardef\Lcur="324C
-\def\crfive{\cr\noalign{\vskip 5pt}}
-\def\crten{\cr\noalign{\vskip 10pt}}
-\def\cofac{\hbox{cofactor}}
-\def\gij{g_{ij}}
-\def\gijinv{g^{ij}}
-\def\gstar{\overline{g}_{\alpha\beta}}
-\def\Kronij{\delta^j_i}
-\def\Ylm{Y_{lm}(\theta,\phi)}
-
-\def\Z{\mathbb{Z}}
-\def\F{\mathbb{F}}
-\def\R{\mathbb{R}}
-\def\L{\mathbb{L}}
-\def\C{\mathbb{C}}
-
-\def\a{\mathfrak{a}}
-\def\b{\mathfrak{b}}
-\def\c{\mathfrak{c}}
-\def\c{\mathfrak{c}}
-\def\r{\mathfrak{r}}
-\def\o{\mathfrak{0}}
-
-\def\av{\underline{a}}
-\def\ev{\underline{e}}
-
-\def\ds{\displaystyle}
-
-\def\E{\mathcal{E}}
-%\def{\Tr}{\cal{Tr}}
-
-\def\half{{1\over2}}
-\def\gab{g_{\alpha\beta}}
-\def\gabinv{g^{\alpha\beta}}
-\def\gmunu{g_{\mu\nu}}
-\def\gmunuinv{g^{\mu\nu}}
-\def\gmu{\gamma^\mu}
-\def\gmudag{\gamma^{\mu\dag}}
-\def\gnu{\gamma^\nu}
-\def\gmuc{\gamma_\mu}
-\def\gnuc{\gamma_\nu}
-\def\gzero{\gamma^0}
-\def\gone{\gamma^1}
-\def\gtwo{\gamma^2}
-\def\gthree{\gamma^3}
-\def\gfive{\gamma_5}
-\def\gfive{\gamma_5}
-\def\gzeroc{\gamma_0}
-\def\gonec{\gamma_1}
-\def\gtwoc{\gamma_2}
-\def\gthreec{\gamma_3}
-\def\qsq{{Q^2\over4E_1^2}}
-\def\qr2{{Q^2\over2}}
-\def\q2{{Q^2}}
-\def\hy{\hat{y}}
-\def\be{\begin{equation}}
-\def\ee{\end{equation}}
-
-\def\bearray{\begin{eqnarray*}}
-\def\eearray{\end{eqnarray*}}
-\def\Var{\hbox{Var}}
-
-\def\mslim{\qopname\relax m{l.i.m}}
-
-\newcommand{\defeq}{\mathrel{\mathop:}=}
-\newcommand{\eqdef}{\mathrel{\mathop=}:}
-
-\newcommand{\bra}[1]{\langle #1|}
-\newcommand{\ket}[1]{|#1\rangle}
-\newcommand{\xAy}[3]{\langle #1| #2| #3 \rangle}
-\newcommand{\braket}[2]{\langle #1|#2\rangle}
-\newcommand{\expect}[1]{\langle #1\rangle}
-\newcommand{\Tr}{{\rm Tr}}
-\newcommand{\goes}{\rightarrow}
-\newcommand{\from}{\leftarrow}
-\newcommand{\define}{\overset{\Delta}{=} }
-\newcommand{\ninfty}{n\rightarrow\infty}
-\newcommand{\Rwp}{$\overset{\hbox{R}_{wp1}}{\sim}$}
-\newcommand{\Rms}{$\overset{\hbox{R}_{ms}}{\sim}$}
-
-\newtheorem{theorem}{Theorem}[section]
-\newtheorem{lemma}[theorem]{Lemma}
-\newtheorem{proposition}[theorem]{Proposition}
-\newtheorem{corollary}[theorem]{Corollary}
-%\newtheorem{defi}[Definition]
-
-\newenvironment{proof}[1][Proof]{\begin{trivlist}
-\item[\hskip \labelsep {\bfseries #1}]}{\end{trivlist}}
-
-\newenvironment{definition}[1][Definition]{\begin{trivlist}
-\item[\hskip \labelsep {\bfseries #1}]}{\end{trivlist}}
-
-\newenvironment{example}[1][Example]{\begin{trivlist}
-\item[\hskip \labelsep {\bfseries #1}]}{\end{trivlist}}
-
-\newenvironment{remark}[1][Remark]{\begin{trivlist}
-\item[\hskip \labelsep {\bfseries #1}]}{\end{trivlist}}
-
-\newenvironment{postulate}[1][Postulate]{\begin{trivlist}
-\item[\hskip \labelsep {\bfseries #1}]}{\end{trivlist}}
-
-\newcommand{\qed}{\nobreak \ifvmode \relax \else
-      \ifdim\lastskip<1.5em \hskip-\lastskip
-      \hskip1.5em plus0em minus0.5em \fi \nobreak
-      \vrule height0.65em width0.4em depth0.20em\fi}
-      %\vrule height0.75em width0.5em depth0.25em\fi}
-      
-\newcommand\xqed[1]{%
-  \leavevmode\unskip\penalty9999 \hbox{}\nobreak\hfill
-  \quad\hbox{#1}}
-\newcommand\demo{\xqed{$\triangle$}}      
- 
-
-%\maketitle
-
+\input mytitle.tex
 %some definitions
-%\setlength{\oddsidemargin}{0cm}
-%\setlength{\textwidth}{17cm}
-%\setlength{\topmargin}{-3cm}
-%\setlength{\textheight}{25cm}
-%\setlength{\unitlength}{1mm}
-%\hsize=6.0 true in
-%\vsize=8.40 true in
-%\pagestyle{plain}
+\input mytexdefs.tex
 
 \baselineskip=14pt
 \parindent = 0.cm
