"Proceeding with Section 8"

--- a/true_8.tex
+++ b/true_8.tex
@@ -146,6 +146,14 @@ $$\psi(\vec{r_1},\vec{r_r}) = \psi_{CM}(\vec{R}) \psi(\vec{r}).$$
 The differential equation for $\psi_{CM}(\vec{R})$ is
 $${P^2\over2M} \psi_{CM}(\vec{R}) = E_{CM} \psi_{CM}(\vec{R})$$ where $\ds E_{total} \equiv E_{CM} + E$.
 
+This differential equation has the solution \[ \psi_{CM}({\vec R}) = A e^{ikR} + B e^{-ikR} \] where $\ds k^2 = {2mE_{CM}\over \hbar^2}$. These solutions are plane wave solutions which represent the center of mass of the system moving
+with a constant velocity. Now we are not interested in this center of mass motion and will study the case where the center of mass is a rest. Or we could transform to the reference frame where the center of mass is at rest. 
+Either way is okay as there is not interesting physics in this center of mass motion. 
+
+Consequently, we are left with a differential equation of $\psi({\vec r})$ to solve of \[ \left[{p^2\over 2m} + V(r)\right] \, \psi({\vec r}) = E \psi({\vec r}).\]
+Thus we see that all two body problems with an interaction depending only on their relative distance will reduce to an equivalent problem of a single particle moving in a central potential $V(r)$. It is equivalent to the case where
+the heavier particle, the proton here, is ``fixed'' at the origin and the other particle moves in the potential $V(r)$ with a reduced mass \[ m = {m_1 m_2\over m_1 + m_2}.\] 
+
 
 
 
